ndb - bug#29574 - enfore min-limit on undofiles